# advances-in-financial-machine-learning

./: Makefile  README.md  pyproject.toml  requirements.txt
AFML_module/: CLA.py  config.py  cusum_filter.py  cv_score.py  dataset_old.py  dataset_utilities.py  features.py  fractional_differencing_utilities.py  log_uniform_rand.py  mc_parallel.py  plots.py  purged_Kfold.py  triple_barrier_utilities.py
notebooks/: AFML_Chapter_10.ipynb  AFML_Chapter_11.ipynb  AFML_Chapter_12.ipynb  AFML_Chapter_13.ipynb  AFML_Chapter_14.ipynb  AFML_Chapter_15.ipynb  AFML_Chapter_16.ipynb  AFML_Chapter_2.ipynb  AFML_Chapter_3.ipynb  AFML_Chapter_4.ipynb  AFML_Chapter_5.ipynb  AFML_Chapter_6.ipynb  AFML_Chapter_7.ipynb  AFML_Chapter_8.ipynb  AFML_Chapter_9.ipynb
