[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "advances_in_financial_machine_learning"
version = "0.0.1"
description = "Selected exercises from AAdvances in Financial Machine Learning by Marcos Lopez de Prado"
authors = [
  { name = "Noah Bittermann" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["advances_in_financial_machine_learning"]
include = ["pyproject.toml", "advances_in_financial_machine_learning/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["advances_in_financial_machine_learning"]
force-sort-within-sections = true

